Changes to Markdown and SB page

--- a/src/content/resources/streamerbot.mdx
+++ b/src/content/resources/streamerbot.mdx
@@ -9,6 +9,10 @@ image:
 homepage: 'https://streamer.bot'
 officaldocs: 'https://docs.streamer.bot'
 ---
+import TwitchLink from '../../components/TwitchLink.astro'
+import YouTubeLink from '../../components/YouTubeLink.astro'
+
+
 ---
 ### Official Links
 
@@ -25,13 +29,14 @@ Below, you'll find official Streamer.bot links, as well as a wide variety of str
 ---
 
 ### Streamers to watch for Streamer.bot Content
-- [CodeWithTD](https://www.twitch.tv/codewithtd)  
-- [Andilippi](https://www.twitch.tv/Andilippi)
-- [ContentDelta](https://www.twitch.tv/ContentDelta)  
-- [Nutty](https://www.twitch.tv/Nutty)  
-- [OSUPhoenix](https://www.twitch.tv/OSUPhoenix)  
-- [Lyfesaver74](https://www.twitch.tv/Lyfesaver74)  
-- [Haunter56](https://www.youtube.com/@haunter56)  
+All these streamers are active in the Streamer.bot community and have a wealth of knowledge to share. They often stream their work, so you can learn from them and ask any questions you might have.
+- <TwitchLink username="CodeWithTd"/>
+- <TwitchLink username="Andilippi"/>
+- <TwitchLink username="ContentDelta"/>
+- <TwitchLink username="Nutty"/>
+- <TwitchLink username="OSUPhoenix"/>
+- <TwitchLink username="Lyfesaver74"/>
+- <YouTubeLink username="haunter56"/>  
 
 ---
 ### YouTube Channels to Check out for Streamer.bot Tutorials
