--- a/src/content/resources/streamerbot.mdx
+++ b/src/content/resources/streamerbot.mdx
@@ -1,8 +1,8 @@
 ---
 live: true
 title: 'Streamer.bot'
-description: 'Resources for Streamer.bot'
-date: 2024-12-16
+description: 'Resources and Information for Streamer.bot'
+date: 2025-04-30
 image:
     url: '/resourceThumbs/streamerbot.png'
     alt: 'Post Thumbnail'
