--- a/src/content/resources/godot.mdx
+++ b/src/content/resources/godot.mdx
@@ -9,18 +9,18 @@ image:
 homepage: 'https://godotengine.org/'
 officaldocs: 'https://docs.godotengine.org/en/stable/'
 ---
-import TwitchLink from '../../components/TwitchLink.astro'
+import TwitchCard from '../../components/TwitchCard.astro'
 import YouTubeLink from '../../components/YouTubeLink.astro'
 
 ---
 ### Official Links
 Godot is a free and open-source game engine that is designed to be easy to use and flexible. It supports both 2D and 3D game development, making it a great choice for indie developers and hobbyists alike.
 
-### Streamers to watch for Godot Content
+### Twitch Streamers to watch for Godot Content
 All these streamers are active in the Godot community and have a wealth of knowledge to share. They often stream their work, so you can learn from them and ask any questions you might have.
 
-- <TwitchLink username="JDDoesDev"/>
-- <TwitchLink username="nan0dev"/>
-- <TwitchLink username="jackie_codes"/>
-- <TwitchLink username="iheartfunnyboys"/>
-- <TwitchLink username="PracticalNPC"/>
+<TwitchCard username="JDDoesDev"/>
+<TwitchCard username="nan0dev"/>
+<TwitchCard username="jackie_codes"/>
+<TwitchCard username="iheartfunnyboys"/>
+<TwitchCard username="PracticalNPC"/>
