--- a/src/content/resources/unity.mdx
+++ b/src/content/resources/unity.mdx
@@ -9,7 +9,7 @@ image:
 homepage: 'https://unity.com/'
 officaldocs: 'https://docs.unity.com/'
 ---
-import TwitchLink from '../../components/TwitchLink.astro'
+import TwitchCard from '../../components/TwitchCard.astro'
 import YouTubeLink from '../../components/YouTubeLink.astro'
 
 ---
@@ -19,7 +19,8 @@ Unity is a powerful game engine that is widely used in the industry. It supports
 ### Streamers to watch for Unity Content
 All these streamers are active in the Unity community and have a wealth of knowledge to share. They often stream their work, so you can learn from them and ask any questions you might have.
 
-- <TwitchLink username="IrishJohnGames"/>
-- <TwitchLink username="BitGamey"/>
-- <TwitchLink username="clayman_dev"/>
-- <TwitchLink username="Bardaky"/>
+<TwitchCard username="IrishJohnGames"/>
+<TwitchCard username="BitGamey"/>
+<TwitchCard username="clayman_dev"/>
+<TwitchCard username="Bardaky"/>
+<TwitchCard username="TheCaptainCoder"/>
