--- a/src/content/resources/godot.mdx
+++ b/src/content/resources/godot.mdx
@@ -2,7 +2,7 @@
 live: true
 title: 'Godot'
 description: 'Resources and Information for Godot'
-date: 2025-04-30
+date: 2025-05-13
 image:
     url: '/resourceThumbs/godot.png'
     alt: 'Post Thumbnail'
@@ -10,11 +10,22 @@ homepage: 'https://godotengine.org/'
 officaldocs: 'https://docs.godotengine.org/en/stable/'
 ---
 import TwitchCard from '../../components/TwitchCard.astro'
-import YouTubeLink from '../../components/YouTubeLink.astro'
+import SocialLink from '../../components/SocialLink.astro'
+import ResourceLink from '../../components/ResourceLink.astro'
+import CommissionLink from '../../components/CommissionLink.astro'
+import YouTubeCard from '../../components/YouTubeCard.astro'
+import { useState } from 'react'
 
 ---
 ### Official Links
 Godot is a free and open-source game engine that is designed to be easy to use and flexible. It supports both 2D and 3D game development, making it a great choice for indie developers and hobbyists alike.
+
+<SocialLink type="Discord" href="discord.gg/godotengine" />
+<SocialLink type="Twitter/X" href="twitter.com/godotengine" />
+<SocialLink type="Reddit" href="reddit.com/r/godot" />
+<SocialLink type="BlueSky" href="https://bsky.app/profile/godotengine.org" />
+
+---
 
 ### Twitch Streamers to watch for Godot Content
 All these streamers are active in the Godot community and have a wealth of knowledge to share. They often stream their work, so you can learn from them and ask any questions you might have.
@@ -24,3 +35,23 @@ All these streamers are active in the Godot community and have a wealth of knowl
 <TwitchCard username="jackie_codes"/>
 <TwitchCard username="iheartfunnyboys"/>
 <TwitchCard username="PracticalNPC"/>
+
+---
+### YouTube Channels to Check out for Godot Content
+All these channels have a wealth of knowledge to share. They often stream their work, so you can learn from them and ask any questions you might have.
+<YouTubeCard username="GDQuest"/>
+<YouTubeCard username="queblegamedevelopment4143"/>
+
+---
+### Community Resources
+These resources are created by the community and are not officially affiliated with Godot. They can be a great way to learn more about the engine and find inspiration for your projects.
+<ResourceLink title="Godot Asset Library" href="https://godotengine.org/asset-library/asset" />
+
+---
+### Commissioned Work
+If you are looking for someone to help you with your Godot project, these creators are available for commission work. They have a wealth of experience and can help you with everything from game design to programming.
+
+***Ahh Nothing to see here yet!***
+
+---
+If you are a creator and would like to be featured on this page, please reach out to us on Discord or Twitter/X. We are always looking for new creators to feature and promote.
