--- a/src/content/resources/streamerbot.mdx
+++ b/src/content/resources/streamerbot.mdx
@@ -10,9 +10,11 @@ homepage: 'https://streamer.bot'
 officaldocs: 'https://docs.streamer.bot'
 ---
 import TwitchCard from '../../components/TwitchCard.astro'
-import YouTubeLink from '../../components/YouTubeLink.astro'
 import SocialLink from '../../components/SocialLink.astro'
 import ResourceLink from '../../components/ResourceLink.astro'
+import CommissionLink from '../../components/CommissionLink.astro'
+import YouTubeCard from '../../components/YouTubeCard.astro'
+import { useState } from 'react'
 
 
 ---
@@ -23,7 +25,7 @@ Streamer.bot is a powerful tool,  with its built-in C# compiler, Streamer.bot gi
 Below, you'll find official Streamer.bot links, as well as a wide variety of streamers, creators, and community-driven sites offering extensions, inspiration, and tools to help take your content to the next level.
 
 <SocialLink type="Discord" href="discord.streamer.bot" />
-<SocialLink type="Twitter" href="twitter.com/streamerdotbot" />
+<SocialLink type="Twitter/X" href="twitter.com/streamerdotbot" />
 <SocialLink type="Reddit" href="reddit.com/r/streamerbot" />
 <SocialLink type="BlueSky" href="bsky.app/profile/streamer.bot" />
 <SocialLink type="Youtube" href="youtube.com/@streamerdotbot" />
@@ -31,7 +33,7 @@ Below, you'll find official Streamer.bot links, as well as a wide variety of str
 
 ---
 
-### Streamers to watch for Streamer.bot Content
+### Twitch Streamers to watch for Streamer.bot Content
 All these streamers are active in the Streamer.bot community and have a wealth of knowledge to share. They often stream their work, so you can learn from them and ask any questions you might have.
 <TwitchCard username="CodeWithTd"/> 
 <TwitchCard username="Andilippi"/>
@@ -41,19 +43,23 @@ All these streamers are active in the Streamer.bot community and have a wealth o
 <TwitchCard username="Lyfesaver74"/>
 
 ---
-### YouTube Channels to Check out for Streamer.bot Tutorials
-<YouTubeLink username="haunter56" twitchName="haunter_56"/>  
-<YouTubeLink username="nuttylmao" twitchName="nutty"/>
-<YouTubeLink username="OSUPhoenix13" twitchName="osuphoenix"/>
-<YouTubeLink username="Gael_Level" twitchName="gaellevel"/>
-<YouTubeLink username="ContentDelta" twitchName="contentDelta" />
-<YouTubeLink username="beardedink" twitchName="beardedink"/>
-<YouTubeLink username="Phlare" twitchName="Phlare"/>
-<YouTubeLink username="TerrierDarts" twitchName="CodeWithTD"/>
-<YouTubeLink username="Andilippi"  twitchName="Andilippi"/>
+### YouTube Channels to Check out for Streamer.bot Content
+
+All these channels have a wealth of knowledge to share. They often stream their work, so you can learn from them and ask any questions you might have.
+
+<YouTubeCard username="haunter56"/>  
+<YouTubeCard username="nuttylmao" />
+<YouTubeCard username="OSUPhoenix13"/>
+<YouTubeCard username="Gael_Level" />
+<YouTubeCard username="ContentDelta" />
+<YouTubeCard username="beardedink" />
+<YouTubeCard username="Phlare" />
+<YouTubeCard username="TerrierDarts" />
+<YouTubeCard username="Andilippi"/>
  
 ---
-### Sites to Get Streamer.bot Extensions
+### Community Resources
+These resources are created by the community and are not officially affiliated with Streamer.bot. They can be a great way to learn more about the software and find inspiration for your projects.
 *Contains a Mix of Free and Paid Extensions*
 <ResourceLink title="Streamer.bot Official Community Extensions" link="https://extensions.streamer.bot/" />
 <ResourceLink title="StreamUP" link="https://streamup.tips/" />
@@ -65,4 +71,7 @@ All these streamers are active in the Streamer.bot community and have a wealth o
 
 ---
 ### Places to Get Work Commissioned
-- [Andilippi](https://doras.to/andi)  
+<CommissionLink title="Andilippi" link="https://doras.to/andi" />
+
+---
+If you are a creator and would like to be featured on this page, please reach out to us on Discord or Twitter/X. We are always looking for new creators to feature and promote.
